Fixed bugs such as display text will return to normal after performing an equation. Vertical aligning of the calculator display. And backspace on an answered value enabling adding more values.

--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -26,6 +26,8 @@ code {
   display: flex;
   float: right;
   height: 100%;
+  align-items: center;
+  justify-content: center;
 }
 #calc-display-inner {
   text-align: right;
